--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -59,6 +59,13 @@
                              </div>
                          </div>
                      </div>
+                         <ul class="list-group">
+                            <li class="list-group-item">
+                            <span class="badge">14</span>
+                            Cras justo odio
+                            </li>
+                        </ul>
+
                      <div class="row">
                          <div class="col-md-4">
                            <i class="fa fa-check fa-2x"></i><br/>
