--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -48,6 +48,7 @@
 		   </a>
 
 			<div class="caption">
+			   <h4><small><i class="[[icon]]"></i> Encuesta</small></h4>
 				<a href="[[uri]]" class="disabled">
 					<h4><i class="[[icon]]"></i> [[name]] </h4>
 				</a>
