--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -112,7 +112,7 @@
                             icon: "fa fa-folder-open",
                             image:this.getAttribute("image"),
                             description:this.getAttribute("description"),
-                            activity_type:"Folder"
+                            activity_type:this.getAttribute("secondary_text")
                     })
                 }
                 else {
