--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -52,7 +52,10 @@
 				<a href="[[uri]]" class="disabled">
 					<h4>[[name]] </h4>
 				</a>
-				<p>[[description]]</p>				      <div class="modal-footer" style="text-align: left">
+				<p>[[description]]</p>
+				     <div class="modal-footer" style="text-align: left">
+				         <div id="rating-[[id]]" class="raty"> </div>
+
                          <div class="progress">
                              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
                                   aria-valuemax="100" style="width: 70%;">
@@ -100,8 +103,9 @@
 				<a href="[[uri]]" class="disabled">
 					<h4>[[name]] </h4>
 				</a>
-				<p>[[description]]</p>				      <div class="modal-footer" style="text-align: left">
-
+				<p>[[description]]</p>
+				<div class="modal-footer" style="text-align: left">
+                    <div id="rating-[[id]]" class="raty"> </div>
                      </div>
                          <ul class="list-group">
                             <li class="list-group-item">
@@ -206,13 +210,16 @@
                             activity_type:"Ejercicio en Consola"});
                     }
 
-                    
+
                 }
                 $("#navlist").append(rendered);
 
             });
 
-        }
+            $('.raty').raty({
+    path: '{{MEDIA_URL}}images',
+    score: 3});
+            }
 
     });
 
