--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -145,27 +145,30 @@
         xmlDoc= $.parseXML(XML_NAV);
         $xml = $(xmlDoc)
         $current = $xml.find("item[is_current|='True']");
-        if ($current[0].getAttribute("is_container")=="True")
-        {
+        if ($current[0].getAttribute("is_container")=="True") {
             var container_template = $('#container_template').html();
             var activity_template = $('#activity_template').html();
 
             Mustache.parse(container_template);   // optional, speeds up future uses
             Mustache.parse(activity_template);   // optional, speeds up future uses
 
-            $current.children().each(function( index ) {
-                var rendered ="";
+            $current.children().each(function (index) {
+                var rendered = "";
                 var uri_string = this.getAttribute("uri");
+                var recommended_value = this.getAttribute("recomended_value");
+                if (recommended_value == "None")
+                    recommended_value = 0;
 
-                if (this.getAttribute("is_container") =="True")
-                {
+                if (this.getAttribute("is_container") == "True") {
                     rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
-                            uri: uri_string,
-                            icon: "fa fa-folder-open",
-                            image:this.getAttribute("image"),
-                            description:this.getAttribute("description"),
-                            activity_type:this.getAttribute("secondary_text"),
-                            id:this.getAttribute("activity")
+                        uri: uri_string,
+                        icon: "fa fa-folder-open",
+                        image: this.getAttribute("image"),
+                        description: this.getAttribute("description"),
+                        activity_type: this.getAttribute("secondary_text"),
+                        id: this.getAttribute("activity"),
+                        rating: recommended_value
+
                     })
                 }
                 else {
@@ -173,10 +176,11 @@
                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-pencil",
-                            image:this.getAttribute("image"),
-                            description:this.getAttribute("description"),
-                            activity_type:"Quiz",
-                            id:this.getAttribute("activity")
+                            image: this.getAttribute("image"),
+                            description: this.getAttribute("description"),
+                            activity_type: "Quiz",
+                            id: this.getAttribute("activity"),
+                            rating: recommended_value
                         });
 
                     }
@@ -184,53 +188,61 @@
                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-pencil-square-o",
-                            image:this.getAttribute("image"),
-                            description:this.getAttribute("description"),
-                            activity_type:"Encuesta",
-                            id:this.getAttribute("activity")
+                            image: this.getAttribute("image"),
+                            description: this.getAttribute("description"),
+                            activity_type: "Encuesta",
+                            id: this.getAttribute("activity"),
+                            rating: recommended_value
                         });
                     }
                     else if (uri_string.lastIndexOf("/activity/video/", 0) === 0) {
                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-video-camera",
-                            image:this.getAttribute("image"),
-                            description:this.getAttribute("description"),
-                            activity_type:"Video",
-                            id:this.getAttribute("activity")
+                            image: this.getAttribute("image"),
+                            description: this.getAttribute("description"),
+                            activity_type: "Video",
+                            id: this.getAttribute("activity"),
+                            rating: recommended_value
                         });
                     }
                     else if (uri_string.lastIndexOf("/activity/", 0) === 0) {
                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-book",
-                            image:this.getAttribute("image"),
-                            description:this.getAttribute("description"),
-                            activity_type:"Lectura",
-                            id:this.getAttribute("activity")
+                            image: this.getAttribute("image"),
+                            description: this.getAttribute("description"),
+                            activity_type: "Lectura",
+                            id: this.getAttribute("activity"),
+                            rating: recommended_value
                         });
                     }
                     else if (uri_string.lastIndexOf("/program/", 0) === 0) {
                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-coffee",
-                            image:this.getAttribute("image"),
-                            description:this.getAttribute("description"),
-                            activity_type:"Ejercicio en Consola",
-                            id:this.getAttribute("activity")
+                            image: this.getAttribute("image"),
+                            description: this.getAttribute("description"),
+                            activity_type: "Ejercicio en Consola",
+                            id: this.getAttribute("activity"),
+                            rating: recommended_value
                         });
                     }
 
 
                 }
                 $("#navlist").append(rendered);
+                if (recommended_value) {
+                    $('#rating-' + this.getAttribute("activity")).raty({
+                        path: '{{MEDIA_URL}}images',
+                        score: recommended_value
+                    });
+                }
+
 
             });
 
-            $('.raty').raty({
-    path: '{{MEDIA_URL}}images',
-    score: 3});
-            }
+        }
 
     });
 
