--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -103,7 +103,9 @@
 				<a href="[[uri]]" class="disabled">
 					<h4>[[name]] </h4>
 				</a>
+				[[#rating]]
 				<div id="rating-[[id]]" class="raty"> </div>
+				[[/rating]]
 				<p>[[description]]</p>
 				<div class="modal-footer" style="text-align: left">
 
