--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -70,7 +70,7 @@ $('#rating-info').raty({
                     url: '/rate_object',
                     type: "POST",
                     contentType: "application/json",
-                    data: JSON.stringify({"uri": "{{ uri }}", "rating": score }),
+                    data: JSON.stringify({"uri": "{{ uri }}", "rating": score ,"user":"{{user.id}}"  }),
                     dataType: "json",
                     success: function(data, textStatus, jqXHR) {
                         alert ("Success");
