--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -42,7 +42,7 @@
 
 {% block scripts %}
 
-<script id="container_template" type="text/javascript">
+<script id="container_template" type="x-tmpl-mustache">
 	<div class="col-xs-12 col-md-4">
 		<div class="thumbnail">
 		   <a href="[[uri]]">
@@ -93,7 +93,7 @@
 	</div>
 </script>
 
-<script id="activity_template" type="text/javascript">
+<script id="activity_template" type="x-tmpl-mustache">
 	<div class="col-xs-12 col-md-4">
 		<div class="thumbnail">
 		   <a href="[[uri]]">
@@ -141,6 +141,23 @@
 
 <script type="text/javascript" charset="utf-8">
 
+
+    function get_icon(uri_string)
+    {
+
+        if (uri_string.lastIndexOf("/test/", 0) === 0)
+            return {icon:"fa fa-pencil",activity_type: "Quiz"} ;
+        else if (uri_string.lastIndexOf("/survey/", 0) === 0)
+            return {icon:"fa fa-pencil-square-o",activity_type: "Encuesta"} ;
+        else if (uri_string.lastIndexOf("/activity/video/", 0) === 0)
+            return {icon:"fa fa-video-camera",activity_type: "Video"} ;
+        else if (uri_string.lastIndexOf("/activity/", 0) === 0)
+            return {icon:"fa fa-book",activity_type: "Lectura"} ;
+        else if (uri_string.lastIndexOf("/program/", 0) === 0)
+            return {icon:"fa fa-coffee",activity_type: "Ejercicio en Consola"} ;
+
+    }
+
     $( document ).ready(function() {
 
         Mustache.tags = ['[[', ']]'];
@@ -160,7 +177,7 @@
                 var rendered = "";
                 var uri_string = this.getAttribute("uri");
                 var recommended_value = this.getAttribute("recomended_value");
-                if (recommended_value == "None")
+                if (recommended_value == "None" || recommended_value == "0" )
                     recommended_value = 0;
 
                 if (this.getAttribute("is_container") == "True") {
@@ -176,63 +193,16 @@
                     })
                 }
                 else {
-                    if (uri_string.lastIndexOf("/test/", 0) === 0) {
+                        var activity_type = get_icon(uri_string);
                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
-                            icon: "fa fa-pencil",
+                            icon: activity_type.icon,
                             image: this.getAttribute("image"),
                             description: this.getAttribute("description"),
-                            activity_type: "Quiz",
+                            activity_type: activity_type.activity_type,
                             id: this.getAttribute("activity"),
                             rating: recommended_value
                         });
-
-                    }
-                    else if (uri_string.lastIndexOf("/survey/", 0) === 0) {
-                        rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
-                            uri: uri_string,
-                            icon: "fa fa-pencil-square-o",
-                            image: this.getAttribute("image"),
-                            description: this.getAttribute("description"),
-                            activity_type: "Encuesta",
-                            id: this.getAttribute("activity"),
-                            rating: recommended_value
-                        });
-                    }
-                    else if (uri_string.lastIndexOf("/activity/video/", 0) === 0) {
-                        rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
-                            uri: uri_string,
-                            icon: "fa fa-video-camera",
-                            image: this.getAttribute("image"),
-                            description: this.getAttribute("description"),
-                            activity_type: "Video",
-                            id: this.getAttribute("activity"),
-                            rating: recommended_value
-                        });
-                    }
-                    else if (uri_string.lastIndexOf("/activity/", 0) === 0) {
-                        rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
-                            uri: uri_string,
-                            icon: "fa fa-book",
-                            image: this.getAttribute("image"),
-                            description: this.getAttribute("description"),
-                            activity_type: "Lectura",
-                            id: this.getAttribute("activity"),
-                            rating: recommended_value
-                        });
-                    }
-                    else if (uri_string.lastIndexOf("/program/", 0) === 0) {
-                        rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
-                            uri: uri_string,
-                            icon: "fa fa-coffee",
-                            image: this.getAttribute("image"),
-                            description: this.getAttribute("description"),
-                            activity_type: "Ejercicio en Consola",
-                            id: this.getAttribute("activity"),
-                            rating: recommended_value
-                        });
-                    }
-
 
                 }
                 $("#navlist").append(rendered);
