--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -168,15 +168,15 @@
     function get_children_activities( element)
     {
         var children = [];
-        element.children().each(function (index) {
+        $(element).children().each(function (index) {
 
             var uri_string = this.getAttribute("uri");
             var icon = get_icon(uri_string);
-            children.append( {
+            children[children.length] =  {
                 heading: this.getAttribute("heading"),
                 uri:uri_string,
                 icon:icon.icon
-            });
+            };
 
         });
 
