--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -71,7 +71,7 @@
                             <li class="list-group-item">
 
 
-                              <i class="[[icon]]"></i> [[heading]]
+                              <i class="[[icon]] text-muted"></i> [[heading]]
 
 
                             </li>
