--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -70,9 +70,9 @@
 
                             <li class="list-group-item">
 
-
+                            <a href="[[uri]]">
                               <i class="[[icon]]"></i>&#160[[heading]]
-
+                            </a>
 
                             </li>
                             [[/children_activities]]
