--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -57,8 +57,8 @@
 				<div id="rating-[[id]]" class="raty"> </div>
 				<p>[[description]]</p>
 
-				     <div class="modal-footer" style="text-align: left">
-                     <!--
+				      <!--
+				       <div class="modal-footer" style="text-align: left">
                          <div class="progress">
                              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
                                   aria-valuemax="100" style="width: 70%;">
@@ -81,8 +81,8 @@
 
                      </ul>
 
-
-                     </div>
+<!--
+                     </div> -->
 
 
 
