--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -72,7 +72,7 @@
 
                             <li class="list-group-item">
 
-                            <a href="[[uri]]">
+                            <a href="[[uri]]" class="list-group-item">
                               <i class="[[icon]]"></i>&#160[[heading]]
                             </a>
 
