--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -66,21 +66,20 @@
                              </div>
                          </div>
                        -->
-                     <ul class="list-group">
 
-                            [[#children_activities]]
+                     [[#children_activities]]
+                     <div class="list-group">
 
-                            <li class="list-group-item">
+
+
 
                             <a href="[[uri]]" class="list-group-item">
                               <i class="[[icon]]"></i>&#160[[heading]]
                             </a>
 
-                            </li>
-                            [[/children_activities]]
 
-                     </ul>
-
+                     </div>
+                    [[/children_activities]]
 <!--
                      </div> -->
 
