--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -147,6 +147,31 @@
 	</div>
 </script>
 
+<script id="disabled_activity_template" type="x-tmpl-mustache">
+	<div class="col-xs-12 col-md-4">
+		<div class="thumbnail">
+		   	<div class="caption">
+			   <h4><small><i class="[[icon]]"></i> [[activity_type]]  </small></h4>
+
+					<h4>[[name]] </h4>
+				[[#rating]]
+				<div id="rating-[[id]]" class="raty"> </div>
+				[[/rating]]
+				<p class="text-muted">[[description]]</p>
+				<div class="modal-footer" style="text-align: left">
+
+                     <div class="row">
+                         <div class="col-md-12">
+                               <i class="fa fa-lock fa-2x"></i>
+                             <small>Actividad bloqueada</small>
+                         </div>
+                     </div>
+			</div>
+		</div>
+	</div>
+</script>
+
+
 
 <script type="text/javascript" charset="utf-8">
 
@@ -221,17 +246,32 @@
                     })
                 }
                 else {
-                        var activity_type = get_icon(uri_string);
-                        rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
-                            uri: uri_string,
-                            icon: activity_type.icon,
-                            image: this.getAttribute("image"),
-                            description: this.getAttribute("description"),
-                            activity_type: activity_type.activity_type,
-                            id: this.getAttribute("activity"),
-                            rating: recommended_value
-                        });
+                     if (this.getAttribute("pre_condition")=="disabled")
+                        {
+                      var activity_type = get_icon(uri_string);
+                         rendered = Mustache.render(disabled_activity_template, {name: this.getAttribute("heading"),
+                             uri: uri_string,
+                             icon: activity_type.icon,
+                             image: this.getAttribute("image"),
+                             description: this.getAttribute("description"),
+                             activity_type: activity_type.activity_type,
+                             id: this.getAttribute("activity"),
+                             rating: recommended_value
+                         });
 
+                        }
+                     else {
+                         var activity_type = get_icon(uri_string);
+                         rendered = Mustache.render(activity_template, {name: this.getAttribute("heading"),
+                             uri: uri_string,
+                             icon: activity_type.icon,
+                             image: this.getAttribute("image"),
+                             description: this.getAttribute("description"),
+                             activity_type: activity_type.activity_type,
+                             id: this.getAttribute("activity"),
+                             rating: recommended_value
+                         });
+                     }
                 }
                 $("#navlist").append(rendered);
                 if (recommended_value) {
