--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -57,34 +57,15 @@
 				<div id="rating-[[id]]" class="raty"> </div>
 				<p>[[description]]</p>
 
-				      <!--
-				       <div class="modal-footer" style="text-align: left">
-                         <div class="progress">
-                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                                  aria-valuemax="100" style="width: 70%;">
-                                 <span class="sr-only">0% Complete</span>
-                             </div>
-                         </div>
-                       -->
-
                      <div class="list-group">
 
                      [[#children_activities]]
-
-
-
-                            <a href="[[uri]]" class="list-group-item">
-                              <i class="[[icon]]"></i>&#160[[heading]]
+                            <a href="[[uri]]" class="list-group-item [[#disabled]] disabled [[/disabled]]">
+                              <i class="[[icon]]"></i> [[heading]]
                             </a>
 
                      [[/children_activities]]
                      </div>
-
-<!--
-                     </div> -->
-
-
-
 
                      <div class="row">
                          <div class="col-md-4">
@@ -202,7 +183,8 @@
             children[children.length] =  {
                 heading: this.getAttribute("heading"),
                 uri:uri_string,
-                icon:icon.icon
+                icon:icon.icon,
+                disabled:(this.getAttribute("pre_condition")=="disabled")
             };
 
         });
