--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -68,10 +68,12 @@
                      </div>
 
                      <div class="row">
+                     [[#objective_status]]
                          <div class="col-md-4">
                            <i class="fa fa-check fa-2x"></i><br/>
                              <small>COMPLETO</small>
                          </div>
+                     [[/objective_status]]
                      </div>
 			</div>
 		</div>
@@ -145,7 +147,7 @@
                            <i class="fa fa-check fa-2x"></i><br/>
                              <small>COMPLETO</small>
                          </div>
-                     [[#objective_status]]
+                     [[/objective_status]]
                          <div class="col-md-4">
                               <i class="fa fa-puzzle-piece fa-2x"></i><br/>
                              <small>0/15</small>
