--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -12,7 +12,7 @@
 
     <div class="row">
 
-         <form id="learning_activity_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
+         <form id="nav_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
 
 
                <ul class="pager">
