--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -106,7 +106,7 @@
                      else
                        icon  = "fa fa-folder-open";
 
-                    rendered = Mustache.render(template, {
+                    rendered = Mustache.render(progress_template, {
                         heading: this.getAttribute("heading"),
                         uri: this.getAttribute("uri"),
                         icon: icon
