--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -102,7 +102,7 @@
                 {
 
                      if (this.getAttribute("pre_condition")=="disabled")
-                       icon =  "fa fa-folder-lock";
+                       icon =  "fa fa-lock";
                      else
                        icon  = "fa fa-folder-open";
 
