--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -30,7 +30,7 @@
 {% block scripts %}
 
 <script id="progress_template" type="x-tmpl-mustache">
- <a href="[[uri]]" class="list-group-item ">
+ <a href="[[uri]]" class="list-group-item [[item_class]] ">
                 <div class="row">
                     <div class="col-md-8">
                         <p class="list-group-item-text"><i class="fa [[icon]]"></i>
@@ -103,13 +103,15 @@
 
                      if (this.getAttribute("pre_condition")=="disabled")
                        icon =  "fa fa-lock";
+                       item_class = "disabled";
                      else
                        icon  = "fa fa-folder-open";
 
                     rendered = Mustache.render(progress_template, {
                         heading: this.getAttribute("heading"),
                         uri: this.getAttribute("uri"),
-                        icon: icon
+                        icon: icon,
+                        item_class:item_class
 
 
                     });
