--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -96,6 +96,7 @@
                 var rendered = "";
                 var uri_string = this.getAttribute("uri");
                 var icon;
+                var item_class;
 
                 //Only top-level containers
                 if (this.getAttribute("is_container") == "True")
